<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.1.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.rosa</groupId>
	<artifactId>maskstream</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>

	<name>maskstream</name>
	<description>Mask Stream</description>
	<properties>
		<java.version>1.8</java.version>
		<spring-kafka.version>2.1.7.RELEASE</spring-kafka.version>
		<spark.version>2.4.4</spark.version>
	</properties>

	<dependencies>
<!--		<dependency>-->
<!--			<groupId>org.apache.spark</groupId>-->
<!--			<artifactId>spark-core_2.11</artifactId>-->
<!--			<version>${spark.version}</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.apache.spark</groupId>-->
<!--			<artifactId>spark-streaming_2.12</artifactId>-->
<!--			<version>${spark.version}</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.apache.spark</groupId>-->
<!--			<artifactId>spark-sql-kafka-0-10_2.12</artifactId>-->
<!--			<version>3.1.1</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.apache.spark</groupId>-->
<!--			<artifactId>spark-streaming-kafka-0-10_2.12</artifactId>-->
<!--			<version>${spark.version}</version>-->
<!--			<exclusions>-->
<!--				<exclusion>-->
<!--					<groupId>org.slf4j</groupId>-->
<!--					<artifactId>slf4j-log4j12</artifactId>-->
<!--				</exclusion>-->
<!--			</exclusions>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.kafka</groupId>-->
<!--			<artifactId>spring-kafka-test</artifactId>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter</artifactId>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-test</artifactId>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.kafka</groupId>-->
<!--			<artifactId>spring-kafka</artifactId>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-configuration-processor</artifactId>-->
<!--			<optional>true</optional>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.junit.jupiter</groupId>-->
<!--			<artifactId>junit-jupiter</artifactId>-->
<!--			<version>RELEASE</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.projectlombok</groupId>-->
<!--			<artifactId>lombok</artifactId>-->
<!--			<version>1.18.4</version>-->
<!--		</dependency>-->

<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
<!--&lt;!&ndash;			<groupId>com.datastax.cassandra</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;			<artifactId>cassandra-driver-core</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;			<version>3.1.0</version>&ndash;&gt;-->
<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>com.datastax.spark</groupId>-->
<!--			<artifactId>spark-cassandra-connector_2.11</artifactId>-->
<!--			<version>2.3.0</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.datastax.spark</groupId>-->
<!--			<artifactId>spark-cassandra-connector-java_2.11</artifactId>-->
<!--			<version>1.5.2</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.cassandraunit</groupId>-->
<!--			<artifactId>cassandra-unit</artifactId>-->
<!--			<version>3.0.0.1</version>-->
<!--		</dependency>-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>RELEASE</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-core_2.11</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-sql_2.11</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-streaming_2.11</artifactId>
			<version>2.3.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.datastax.spark</groupId>
			<artifactId>spark-cassandra-connector_2.11</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.datastax.spark</groupId>
			<artifactId>spark-cassandra-connector-java_2.11</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-sql-kafka-0-10_2.11</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.twitter</groupId>
			<artifactId>hbc-core</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.clerezza.ext</groupId>
			<artifactId>org.json.simple</artifactId>
			<version>0.4</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.4</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
